Changelog Notes:
Fix Well-Fitted not retaining stats when reloading game.
Fix Evasive not working upon exiting and reloading a game.
Add new trait: Tavern Brawler.