@@ -1,0 +1,16 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
+<clothingItem>
+    <m_MaleModel>media\models_X\Skinned\Clothes\Bob_JacketLeather.X</m_MaleModel>
+    <m_FemaleModel>media\models_X\Skinned\Clothes\Kate_JacketLeather.X</m_FemaleModel>
+    <m_GUID>7f90754f-b7ab-4036-9971-637366e52211</m_GUID>
+    <m_Static>false</m_Static>
+    <m_AllowRandomHue>true</m_AllowRandomHue>
+    <m_AllowRandomTint>true</m_AllowRandomTint>
+    <m_AttachBone></m_AttachBone>
+    <m_Masks>12</m_Masks>
+    <m_Masks>13</m_Masks>
+    <m_Masks>3</m_Masks>
+    <m_Masks>5</m_Masks>
+    <m_UnderlayMasksFolder>media/textures/Clothes/Jacket/Masks</m_UnderlayMasksFolder>
+    <textureChoices>clothes\jacket\jacket_leather_black</textureChoices>
+</clothingItem>
