@@ -16,7 +16,7 @@ MoreTraits {
         OpenSound   =   OpenBag,
         CloseSound   =   CloseBag,
         PutInSound   =   PutItemInBag,
-        ClothingItem = Bag_BigHikingBag,
+        ClothingItem = Bag_PackerBag,
         BloodLocation = Bag,
         RunSpeedModifier = 0.90,
         AttachmentReplacement = Bag,
@@ -422,7 +422,7 @@ MoreTraits {
         DisplayCategory = Clothing,
         Type = Clothing,
         DisplayName = Antique Leather Jacket,
-        ClothingItem = Jacket_Black,
+        ClothingItem = Jacket_Antique,
         BodyLocation = Jacket,
         Icon = JacketBlack,
         BloodLocation = Jacket,
@@ -443,8 +443,8 @@ MoreTraits {
     {
         DisplayCategory = Clothing,
         Type = Clothing,
-        DisplayName = Civilian Bulletproof Vest,
-        ClothingItem = Vest_BulletCivilian,
+        DisplayName = Antique Bulletproof Vest,
+        ClothingItem = Vest_BulletAntique,
         BodyLocation = TorsoExtra,
         Icon = BulletVestWhite,
         BloodLocation = ShirtNoSleeves,
@@ -459,8 +459,8 @@ MoreTraits {
 	{
 	    DisplayCategory = Clothing,
 		Type = Clothing,
-		DisplayName = Riding Boots,
-		ClothingItem = Shoes_RidingBoots,
+		DisplayName = Antique Boots,
+		ClothingItem = Shoes_AntiqueBoots,
 		BodyLocation = Shoes,
 		BloodLocation = Shoes,
 		Icon = BootsRiding,
@@ -489,7 +489,7 @@ MoreTraits {
         OpenSound   =   OpenBag,
         CloseSound   =   CloseBag,
         PutInSound   =   PutItemInBag,
-        ClothingItem = Bag_HikingBag,
+        ClothingItem = Bag_SmallHikingBag,
         BloodLocation = Bag,
         RunSpeedModifier = 0.9,
         AttachmentReplacement = Bag,
